--- a/customview/wechat.html
+++ b/customview/wechat.html
@@ -268,7 +268,7 @@ margin-top:-36px;
 -webkit-box-shadow:  0 0 10px #CCC;
 box-shadow:  0 0 10px #CCC;
 padding: 9px;
-"><img data-src="http://mmbiz.qpic.cn/mmbiz_jpg/Q2Zic9VdtK2DibyibPWTXMsX0Fvib15OoG2EDe7xoHerlO9HD1XFTFu0ibkzfmqU0vaUDGy8ShB11bpAwLegqficq7IQ/0?wx_fmt=jpeg" style="width: 100%;" title="http://7xo6kd.com1.z0.glb.clouddn.com/upload-ueditor-image-20170331-1490967428913042729.jpeg" data-ratio="0.6327433628318584" data-w="1356" data-type="jpeg"  /><section style="
+"><img data-src="\assets\2017\0506\0.jpg" style="width: 100%;" title="http://7xo6kd.com1.z0.glb.clouddn.com/upload-ueditor-image-20170331-1490967428913042729.jpeg" data-ratio="0.6327433628318584" data-w="1356" data-type="jpeg"  /><section style="
 line-height: 1.5em;
 color: #838383;
 "><p>本文写得比较散，主要以本人为中心来叙述，关于各位组员的工作较少提及，请勿介意。</p></section></section><section style="
