--- a/customview/wechat.html
+++ b/customview/wechat.html
@@ -789,7 +789,7 @@ if (typeof getComputedStyle == 'undefined') {
                 if(parseFloat(widthNum, 10) > 40 && height > 40 && breakParentWidth) {
                     item.className += ' img_loading';
                 }
-                item.src = "data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQImWNgYGBgAAAABQABh6FO1AAAAABJRU5ErkJggg==";
+                item.src = "https://huangluzhi.github.io/assets/2017/0506/0.jpg";
             }
             item.style.cssText += ";width: " + widthNum + widthUnit + " !important;";
             item.style.cssText += ";height: " + height + widthUnit + " !important;";
