--- a/customview/wechat.html
+++ b/customview/wechat.html
@@ -309,7 +309,7 @@ transform: rotate(50deg);
 
 <div class="rich_media_tool" id="js_toobar3">
 
-        <a class="media_tool_meta meta_primary" id="js_view_source" href="##">阅读原文</a>
+        <a class="media_tool_meta meta_primary" id="js_view_source" href="https://mp.weixin.qq.com/s?__biz=MzI2MDYxODI2NQ==&mid=2247483969&idx=1&sn=14a6e66ef841a1d591076f3eb9d18e62&chksm=ea67a337dd102a212dfa06dad4827a14903528c44816d92aee2ab6cd1368da110ebd0b52b78c&scene=25#wechat_redirect">CHECK --> Product Release Video of Ocean Crisis</a>
         <div id="js_read_area3" class="media_tool_meta tips_global_primary meta_primary" style="display:none;">阅读 <span id="readNum3"></span></div>
 
     <span style="display:none;" class="media_tool_meta meta_extra meta_praise" id="like_old">
@@ -354,83 +354,6 @@ transform: rotate(50deg);
     
     </div>
 
-
-<div class="like_comment_wrp" id="js_a_like_comment" style="display: none;">
-  <div class="like_comment_inner">
-    <div class="like_comment_hd" style="display:none" id="js_like_title"></div>
-    <div class="like_comment_bd">
-      <div class="tips_global_primary like_comment_tips">
-        <i class="weui-icon-success"></i>已推荐到看一看<a href="javascript:;" class="like_comment_share_link" id="js_a_like_comment_share">和朋友分享想法</a>
-      </div>
-    </div>
-    <div class="like_comment_ft">
-      <span id="js_a_like_comment_msg" class="like_comment_msg" style="visibility:hidden">最多200字，当前共<span id="js_a_like_current_cnt"></span>字</span>
-      <button class="like_comment_btn" disabled="disabled" id="js_a_like_confirm">发送</button>
-    </div>
-  </div>
-</div>
-
-<div id="js_like_toast" style="display: none;">
-  <div class="weui-mask_transparent"></div>
-  <div class="weui-toast">
-    <i class="weui-icon-success-no-circle weui-icon_toast"></i>
-    <p class="weui-toast__content" id="js_toast_msg">已发送</p>
-  </div>
-</div>
-
-
-<div style="display: none;" id="js_b_comment_panel" class="like_comment_primary_pop">
-  <div class="like_comment_primary_wrp" id="js_b_wrp">
-    <div class="like_comment_primary_inner">
-      <div class="like_comment_primary_hd">
-        <h4 class="like_comment_primary_title">
-          朋友将在看一看看到        </h4>
-        <button id="js_b_like_confirm" class="like_comment_primary_btn">确定</button>
-      </div>
-      <div id='js_b_comment_text_first' class="like_comment_primary_bd">
-        <span class="tips_global_primary">
-          分享你的想法...        </span>
-      </div>
-    </div>
-  </div>
-  <div class="like_comment_primary_mask" id="js_mask_1"></div>
-</div>
-
-<div style="display: none;" id="js_b_comment_final">
-  <div class="like_comment_primary_wrp editing" id="js_comment_wrp">
-    <div class="like_comment_primary_inner">
-      <div class="like_comment_primary_hd">
-        <button class="like_comment_primary_cancel" id="js_b_comment_cancel">取消</button>
-        <h4 class="like_comment_primary_title"> 分享想法到看一看 </h4>
-        <button class="like_comment_primary_btn" id="js_b_comment_confirm">确定</button>
-      </div>
-      <div class="like_comment_primary_bd">
-        <textarea class="like_comment_textarea weui-textarea" placeholder="分享你的想法..." id="js_b_comment_text_second"></textarea>
-      </div>
-      <span class="like_comment_msg" id="js_b_like_comment_msg" style="visibility: hidden;">最多200字，当前共<span id="js_b_like_current_cnt"></span>字</span>
-    </div>
-  </div>
-  <div class="like_comment_primary_mask" id="js_mask_2"></div>
-</div>
-
-<div id="js_loading" style=" display: none;">
-    <div class="weui-mask_transparent"></div>
-    <div class="weui-toast">
-        <i class="weui-loading weui-icon_toast"></i>
-        <p class="weui-toast__content">发送中</p>
-    </div>
-</div>
-
-<div id="js_fail" style="display:none">
-    <div class="weui-mask"></div>
-    <div class="weui-dialog">
-    <div class="weui-dialog__bd">
-        网络异常，请稍后重试    </div>
-    <div class="weui-dialog__ft">
-      <a href="javascript:;" class="weui-dialog__btn weui-dialog__btn_primary" id="js_fail_inform">知道了</a>
-    </div>
-    </div>
-</div>
 
 
 
