--- a/customview/wechat.html
+++ b/customview/wechat.html
@@ -1052,7 +1052,7 @@ if (typeof getComputedStyle == 'undefined') {
         }
     }
         
-    var title ="黄鲁直的音乐屋";
+    var title ="介绍一门神奇的课";
 
     var is_new_msg=true;
     
