--- a/customview/wechat.html
+++ b/customview/wechat.html
@@ -891,7 +891,7 @@ if (typeof getComputedStyle == 'undefined') {
     var _ori_article_type = "";
 
     var is_follow = "";
-    var nickname = "黄鲁直的音乐屋";
+    var nickname = "黄鲁直";
     var appmsg_type = "9";
     var ct = "1494039577";
     var publish_time = "2017-05-06" || "";
@@ -904,7 +904,7 @@ if (typeof getComputedStyle == 'undefined') {
     var hd_head_img = "http://wx.qlogo.cn/mmhead/Q3auHgzwzM7VyRGcuSOB8OFvMA1cbnyAzlHiag1k4jdr9DRO1KqFibMw/0"||"";
     var ori_head_img_url = "http://wx.qlogo.cn/mmhead/Q3auHgzwzM7VyRGcuSOB8OFvMA1cbnyAzlHiag1k4jdr9DRO1KqFibMw/132";
     var msg_title = "介绍一门神奇的课";
-    var msg_desc = "赵老逼死人系列";
+    var msg_desc = "介绍一门神奇的课";
     var msg_cdn_url = "http://mmbiz.qpic.cn/mmbiz_jpg/Q2Zic9VdtK2DibyibPWTXMsX0Fvib15OoG2ErCR8VyQQ654YUx2hfFiaQObxLiakZElvqia7q2eZZt0HqUrzOfX8xAWCw/0?wx_fmt=jpeg"; 
     var cdn_url_1_1  = ""; 
     var cdn_url_235_1 = ""; 
