--- a/customview/wechat2.html
+++ b/customview/wechat2.html
@@ -211,6 +211,11 @@
 </header>
 
 
+    <div class="content-wrapper">
+        <div class="content-wrapper__inner">
+            <article class="post-container post-container--single" itemscope itemtype="http://schema.org/BlogPosting">
+
+  
         
 <script nonce="1743564291" type="text/javascript">
     var biz = ""||"MzI2MDYxODI2NQ==";
