--- a/customview/karabac.html
+++ b/customview/karabac.html
@@ -1799,7 +1799,7 @@ __moonf__(); }, 25);</script><script nonce="1743564291" type="text/javascript">
         <img src="/assets/images/wechat.png" alt="微信">
         <img src="/assets/images/alipay.png" alt="支付宝">
         </p>
-        <p align="left" >
+        <p align="center" >
           <b>我 秦始皇 打钱</b>
           <!--
           <a href="/contribute">点击这里查看捐赠者名单。</a>
