--- a/customview/AutumnLeaves.html
+++ b/customview/AutumnLeaves.html
@@ -222,6 +222,7 @@
   </header>
 
   <img src="\assets\2018\AutumnLeaves\1.jpg" width="100%">
+  <img src="\assets\2018\AutumnLeaves\2.jpg" width="100%">
 <p>
     <br/>
 </p>
