--- a/customview/karabac.html
+++ b/customview/karabac.html
@@ -1768,7 +1768,9 @@ __moonf__(); }, 25);</script><script nonce="1743564291" type="text/javascript">
    
 
 </article>
-
+        <div class="content-wrapper__inner">
+            <article class="post-container post-container--single" itemscope itemtype="http://schema.org/BlogPosting">
+ 
 <!--广告-->
 
 <!--
