--- a/customview/zhuhaifsec2018.html
+++ b/customview/zhuhaifsec2018.html
@@ -224,8 +224,10 @@
 <p>
     <br/>
 </p>
-  <img src="\assets\2018\zhuhaifsec2018\1.jpg" width="50%">
-  <img src="\assets\2018\zhuhaifsec2018\2.jpg" width="50%">
+	<table><tr>
+	<td><img src=\assets\2018\zhuhaifsec2018\1.jpg border=0></td>
+	<td><img src=\assets\2018\zhuhaifsec2018\2.jpg border=0></td>
+	</tr></table>
   <img src="\assets\2018\zhuhaifsec2018\3.jpg" width="100%">
   <img src="\assets\2018\zhuhaifsec2018\4.jpg" width="100%">
   <img src="\assets\2018\zhuhaifsec2018\5.jpg" width="100%">
