--- a/customview/zhuhaifsec2018.html
+++ b/customview/zhuhaifsec2018.html
@@ -224,10 +224,10 @@
 <p>
     <br/>
 </p>
-	<table><tr>
-	<td><img src=\assets\2018\zhuhaifsec2018\1.jpg border=0></td>
-	<td><img src=\assets\2018\zhuhaifsec2018\2.jpg border=0></td>
-	</tr></table>
+	<div id="main" style="width:100%;">
+	<div id="left" style="width:50%;float:left;"><img src=\assets\2018\zhuhaifsec2018\1.jpg border=0></div>
+	<div id="right" style="width:50%;float:left;"><img src=\assets\2018\zhuhaifsec2018\2.jpg border=0></div>
+	</div>
   <img src="\assets\2018\zhuhaifsec2018\3.jpg" width="100%">
   <img src="\assets\2018\zhuhaifsec2018\4.jpg" width="100%">
   <img src="\assets\2018\zhuhaifsec2018\5.jpg" width="100%">
