--- a/customview/zhuhaifsec2018.html
+++ b/customview/zhuhaifsec2018.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="/css/main.css">
 
   <link rel="canonical" href="https://huangluzhi.github.io/customview/AutumLeaves">
-  <link rel="alternate" type="application/rss+xml" title="GcsSloop" href="http://www.gcssloop.com/feed.xml">
+  <link rel="alternate" type="application/rss+xml" title="HuangLuzhi" href="http://huangluzhi.github.io/feed.xml">
   
   <meta name="google-site-verification" content="Z_g58PkzRAyBMxkqrcDdWrTBK8oOWM-7rUHauhLNF2E" />
   <meta name="baidu-site-verification" content="kUtTXCKaZs" />
