--- a/customview/silversharkmod.html
+++ b/customview/silversharkmod.html
@@ -261,7 +261,7 @@
 				</li>
 			</ol>
 			<p>
-				3ds Max没有jiu具体版本要求。神力科莎需要用到里面的sdk开发者工具包的kseditor制作工具。mod制作工具的下载链接如下：
+				3ds Max没有具体版本要求。神力科莎需要用到里面的sdk开发者工具包的kseditor制作工具。mod制作工具的下载链接如下：
 			</p>
 			<p>
 				Content Manager: http://sim-garage.co.uk/
