--- a/customview/karabac.html
+++ b/customview/karabac.html
@@ -180,7 +180,7 @@
   
   <!-- Email -->
   <li class="navigation__item">
-    <a href="314726262@qq.com" title="发邮件给我">
+    <a href="mailto:rex.t.huang@gmail.com" title="发邮件给我">
       <i class='social fa fa-envelope'></i>
       <span class="label">Email</span>
     </a>
