--- a/customview/silversharkmod.html
+++ b/customview/silversharkmod.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="/css/main.css">
 
   <link rel="canonical" href="https://huangluzhi.github.io/customview/silversharkmod">
-  <link rel="alternate" type="application/rss+xml" title="GcsSloop" href="http://www.gcssloop.com/feed.xml">
+  <link rel="alternate" type="application/rss+xml" title="HuangLuzhi" href="http://huangluzhi.github.io/feed.xml">
   
   <meta name="google-site-verification" content="Z_g58PkzRAyBMxkqrcDdWrTBK8oOWM-7rUHauhLNF2E" />
   <meta name="baidu-site-verification" content="kUtTXCKaZs" />
@@ -264,13 +264,13 @@
 				3ds Max没有具体版本要求。神力科莎需要用到里面的sdk开发者工具包的kseditor制作工具。mod制作工具的下载链接如下：
 			</p>
 			<p>
-				Content Manager: http://sim-garage.co.uk/
+				Content Manager: <a href="https://assettocorsa.club/content-manager.html">https://assettocorsa.club/content-manager.html</a>
 			</p>
 			<p>
-				CarTuner: www.racedepartment.com/threads/assetto-corsa-car-tuner.131997/
+				CarTuner: <a href="www.racedepartment.com/threads/assetto-corsa-car-tuner.131997/">www.racedepartment.com/threads/assetto-corsa-car-tuner.131997/</a>
 			</p>
 			<p>
-				3DSimED: http://sim-garage.co.uk/
+				3DSimED: <a href="http://sim-garage.co.uk/">http://sim-garage.co.uk/</a>
 			</p>
 <p>
     <br/>
