--- a/customview/silversharkmod.html
+++ b/customview/silversharkmod.html
@@ -279,7 +279,7 @@
 				0.1 开始动手 ……前的热身运动
 			</h3>
 			<p>
-				在这个官网上有制作一个最简单的神力科莎车辆mod的教程 assettocorsamods.net/threads/your-first-car-in-assetto-corsa-basic-guide.1019 ，在最下面有一个下载地址，包含了车辆的mod、fbx文件等等，是一个很好的例子，建议先下载一份，在接下来的过程中可以随时拿出来做做实验。
+				在这个官网上有制作一个最简单的神力科莎车辆mod的教程 <a href="http://assettocorsamods.net/threads/your-first-car-in-assetto-corsa-basic-guide.1019">http://assettocorsamods.net/threads/your-first-car-in-assetto-corsa-basic-guide.1019</a> ，在最下面有一个下载地址，包含了车辆的mod、fbx文件等等，是一个很好的例子，建议先下载一份，在接下来的过程中可以随时拿出来做做实验。
 			</p>
 			<p>
 				同时此网址对于这个简单的mod也做了较为详细的教学内容，接下来的一部分将会以此教程为辅助进行解释讲解。
