--- a/customview/silversharkmod.html
+++ b/customview/silversharkmod.html
@@ -284,6 +284,52 @@
 			<p>
 				同时此网址对于这个简单的mod也做了较为详细的教学内容，接下来的一部分将会以此教程为辅助进行解释讲解。
 			</p>
+			<blockquote>
+				<p>
+					\animations
+				</p>
+				<p>
+					- 这是为汽车存储动画文件的地方。诸如换档，转向等等。你可以从formula_K或其他汽车中复制它。
+				</p>
+				<p>
+					\data*
+				</p>
+				<p>
+					- 这是您汽车最为关键的文件夹。里面是汽车物理的所有ini文件。现在整个文件夹被打包在一个名为data.acd的文件中。
+				</p>
+				<p>
+					\sfx
+				</p>
+				<p>
+					- 声音文件夹。 Assetto Corsa使用FMOD音频引擎，汽车的所有声音都打包在.bank文件中。为了拥有一个工作车模型，我们需要一个声音。我们将使用现有汽车的.bank音频文件构建简单的解决方案。详情请参阅FMod and Assetto Corsa - unofficial fix。
+				</p>
+				<p>
+					\skins
+				</p>
+				<p>
+					- 皮肤文件夹。每个皮肤，都有自己的子文件夹。
+				</p>
+				<p>
+					\texture
+				</p>
+				<p>
+					- 非常重要的文件夹。这辆车的所有贴图都必须在这里。首先，您可以从formula_k复制它，因为它在子文件夹框架中还包含一些公共共享贴图。另外，无论你在你的汽车上创建和使用什么新的纹理，只要直接把它放到 \texture 文件夹中就行了。
+				</p>
+				
+				<p>
+					模型完成并导出到kn5文件后，所有贴图都将包含在kn5中。因此，您可以删除所有，然后保留您从formula_k复制的“默认”纹理文件夹。
+				</p>
+				
+				<p>
+					这样做的好处:如果你从一开始就使用这个文件夹，在建模阶段，当你在KS Editor中打开它时，材料就已经被分配给汽车了。
+				</p>
+				<p>
+					\ui
+				</p>
+				<p>
+					- 这在菜单中使用，包含2个文件：品牌标志（PNG，128x128像素）和ui_car.json中汽车的基本数据。您至少应该编辑汽车名称，才在菜单中方便地找到您的小车车:)。您可以使用记事本编辑它，但为了方便修改所有其他的文本文件，我推荐类似Notepad+的文本编辑器
+				</p>
+			</blockquote>
 <p>
     <br/>
 </p>
