--- a/customview/silversharkmod.html
+++ b/customview/silversharkmod.html
@@ -300,7 +300,7 @@
 				<p>
 					<span><strong>\sfx</strong></span>
 				<div>
-					- <span>声音文件夹。 Assetto Corsa使用FMOD音频引擎，汽车的所有声音都打包在.bank文件中。为了拥有一个工作车模型，我们需要一个声音。我们将使用现有汽车的.bank音频文件构建简单的解决方案。详情请参阅FMod and Assetto Corsa - unofficial fix。</span>
+					- <span>声音文件夹。 Assetto Corsa使用FMOD音频引擎，汽车的所有声音都打包在.bank文件中。为了拥有一个工作车模型，我们需要一个声音。我们将使用现有汽车的.bank音频文件构建简单的解决方案。详情请参阅<a href="https://assettocorsamods.net/threads/fmod-and-assetto-corsa-unofficial-fix.132/">FMod and Assetto Corsa - unofficial fix</a>。</span>
 				</div>
 				</p>
 				<p>
