--- a/customview/silversharkmod.html
+++ b/customview/silversharkmod.html
@@ -286,6 +286,10 @@
 			</p>
 			<blockquote>
 				<p>
+					<span><strong>（翻译）</strong></span>
+				</p>
+			
+				<p>
 					<span><strong>\animations</strong></span>
 				<div>
 					<span>- 这是为汽车存储动画文件的地方。诸如换档，转向等等。你可以从formula_K或其他汽车中复制它。</span>
