--- a/customview/silversharkmod.html
+++ b/customview/silversharkmod.html
@@ -290,31 +290,31 @@
 				</p>
 			
 				<p>
-					<span><strong>\animations</strong></span>
+					<strong>\animations</strong><br />
 				<div>
 					<span>- 这是为汽车存储动画文件的地方。诸如换档，转向等等。你可以从formula_K或其他汽车中复制它。</span>
 				</div>
 				</p>
 				<p>
-					<span><strong>\data*</strong></span>
+					<strong>\data*</strong><br />
 				<div>
 					- <span>这是您汽车最为关键的文件夹。里面是汽车物理的所有ini文件。现在整个文件夹被打包在一个名为data.acd的文件中。</span>
 				</div>
 				</p>
 				<p>
-					<span><strong>\sfx</strong></span>
+					<strong>\sfx</strong><br />
 				<div>
 					- <span>声音文件夹。 Assetto Corsa使用FMOD音频引擎，汽车的所有声音都打包在.bank文件中。为了拥有一个工作车模型，我们需要一个声音。我们将使用现有汽车的.bank音频文件构建简单的解决方案。详情请参阅<a href="https://assettocorsamods.net/threads/fmod-and-assetto-corsa-unofficial-fix.132/">FMod and Assetto Corsa - unofficial fix</a>。</span>
 				</div>
 				</p>
 				<p>
-					<span><strong>\skins</strong></span>
+					<strong>\skins</strong><br />
 				<div>
 					- <span>皮肤文件夹。每个皮肤，都有自己的子文件夹。</span>
 				</div>
 				</p>
 				<p>
-					<span><strong>\texture</strong></span>
+					<strong>\texture</strong><br />
 				<div>
 					- <span>非常重要的文件夹。这辆车的所有贴图都必须在这里。首先，您可以从formula_k复制它，因为它在子文件夹框架中还包含一些公共共享贴图。另外，无论你在你的汽车上创建和使用什么新的纹理，只要直接把它放到 \texture 文件夹中就行了。</span>
 				</div>
@@ -358,9 +358,6 @@
 			<p>
 				导入后按照前述的初级教程，对3ds Max里面的模型进行初级基本配置。
 			</p>
-<p>
-    <br/>
-</p>
 			<blockquote>
 				<p>
 					<strong>2/ Preparing your 3D model</strong><br /><span>Screens here are made in Blender, as that's the tool at hand. Similar concept will apply for 3dsmax, Maya or other modelling package.</span><br />
