--- a/customview/silversharkmod.html
+++ b/customview/silversharkmod.html
@@ -390,7 +390,7 @@
 				4. 导入到sdk-kseditor进行贴图
 			</h3>
 			<p>
-				kseditor是Assetto Corsa的sdk工具包之一，为模型导入修改贴图用。具体位置在: steam安装文件夹\assettocorsa\sdk\editor\ksEditor.exe
+				kseditor是Assetto Corsa的sdk工具包之一，为模型导入修改贴图用。具体位置在: AC安装文件夹\assettocorsa\sdk\editor\ksEditor.exe
 			</p>
 			<p>
 				我们将模型导出为fbx文件然后导入kseditor，根据不同贴图需要在左上方选择贴图类型，Diffusion为表面贴图（表面涂装），Detail为纹理贴图（例如碳纤维材料），map为反射贴图（决定漫反射程度）。贴图通过PS对前面所述的uv图进行修改涂装后倒入到kseditor的贴图选项中。之后保存时会生成在fbx文件同目录生成一个 同名ini文件，就是贴图的配置信息文件。贴好图之后就要导出为kn5文件，既Assetto Corsa的mod模型文件。
