--- a/customview/silversharkmod.html
+++ b/customview/silversharkmod.html
@@ -245,16 +245,19 @@
 			</p>
 			<ol>
 				<li>
+					神力科莎（Assetto Corsa）
+				</li>
+				<li>
 					3ds Max 或 Maya（本案例将选用3ds Max）
 				</li>
 				<li>
 					Photo Shop
 				</li>
 				<li>
-					神力科莎（Assetto Corsa）
+					Content Manager
 				</li>
 				<li>
-					Content Manager
+					NotePad++等文本编辑器
 				</li>
 				<li>
 					CarTuner，acd_tool，3DSimED等mod制作工具
