--- a/customview/silversharkmod.html
+++ b/customview/silversharkmod.html
@@ -492,7 +492,10 @@
 					车辆仪表盘及灯光信息
 				</dt>
 				<dd>
-					灯光信息在data\digital_instruments.ini中。转速表仪表盘信息在data\digital_instruments.ini中，支持显示速度、转速、温度、G值、油量等等信息。详细操作方法在pipeline.pdf文件P19后。
+					灯光信息在data\digital_instruments.ini中。转速表仪表盘信息在data\digital_instruments.ini中，支持显示速度、转速、温度、G值、油量等等信息。详细操作方法在pipeline.pdf文件P19后。	
+				</dd>
+				<dd>
+					<a href="http://www.assettocorsa.net/forum/index.php?threads/analog-digital-instruments-lights-q-a-request-official-support-here-check-first-post.12249/">【AC官方论坛】更详细的指引</a>
 				</dd>
 			</dl>
 <p>
