--- a/customview/silversharkmod.html
+++ b/customview/silversharkmod.html
@@ -488,12 +488,12 @@
 			<img src="\assets\2018\silversharkmod\4.jpg" width="100%">
 			</p>
 			<div id="main" style="width:100%;">
-			<div id="left" style="width:48%;float:left;"><img src="\assets\2018\zhuhaifsec2018\5.jpg" width="100%"></div>
-			<div id="right" style="width:48%;float:left;"><img src="\assets\2018\zhuhaifsec2018\6.jpg" width="100%"></div>
+			<div id="left" style="width:48%;float:left;"><img src="\assets\2018\silversharkmod\5.jpg" width="100%"></div>
+			<div id="right" style="width:48%;float:left;"><img src="\assets\2018\silversharkmod\6.jpg" width="100%"></div>
 			</div>
 			<div id="main" style="width:100%;">
-			<div id="left" style="width:48%;float:left;"><img src="\assets\2018\zhuhaifsec2018\7.jpg" width="100%"></div>
-			<div id="right" style="width:48%;float:left;"><img src="\assets\2018\zhuhaifsec2018\8.jpg" width="100%"></div>
+			<div id="left" style="width:48%;float:left;"><img src="\assets\2018\silversharkmod\7.jpg" width="100%"></div>
+			<div id="right" style="width:48%;float:left;"><img src="\assets\2018\silversharkmod\8.jpg" width="100%"></div>
 			</div>
 			<p>
 				相关问题交流或者有mod制作需求欢迎通过主页的邮箱联系我~
