--- a/customview/silversharkmod.html
+++ b/customview/silversharkmod.html
@@ -463,6 +463,7 @@
 					车辆仪表盘信息
 				</li>
 			</ul>
+			<br />
 			<p>
 				<strong>collider.kn5 车辆碰撞检测模型</strong><br />
 				<span>collider的造型过程与车辆本体模型类似，只不过collider用于检测车辆碰撞，要求模型包含车辆边界，数据量尽量小。注意collider的坐标应与车辆本体相同，以免造成两者位置偏移。</span><br /><br />
@@ -476,7 +477,7 @@
 				<span>灯光信息在data\digital_instruments.ini中。转速表仪表盘信息在data\digital_instruments.ini中，支持显示速度、转速、温度、G值、油量等等信息。详细操作方法在pipeline.pdf文件P19后。	</span><br /><br />
 			</p>		
 			<p>
-				其余内容正在持续完善中。。。
+				<strong>其余内容正在持续完善中。。。</strong>
 <p>
     <br/>
 </p>
