--- a/customview/silversharkmod.html
+++ b/customview/silversharkmod.html
@@ -486,7 +486,8 @@
 			<img src="\assets\2018\silversharkmod\2.jpg" width="100%">
 			<img src="\assets\2018\silversharkmod\3.jpg" width="100%">
 			<img src="\assets\2018\silversharkmod\4.jpg" width="100%">
-			
+			<img src="\assets\2018\silversharkmod\9.jpg" width="100%">
+			<!--
 			<div id="main" style="width:100%;">
 			<div id="left" style="width:48%;float:left;"><img src="\assets\2018\silversharkmod\5.jpg" width="100%"></div>
 			<div id="right" style="width:48%;float:left;"><img src="\assets\2018\silversharkmod\6.jpg" width="100%"></div>
@@ -495,6 +496,7 @@
 			<div id="left" style="width:48%;float:left;"><img src="\assets\2018\silversharkmod\7.jpg" width="100%"></div>
 			<div id="right" style="width:48%;float:left;"><img src="\assets\2018\silversharkmod\8.jpg" width="100%"></div>
 			</div>
+			-->
 <p>
     <br/>
 </p>
