--- a/customview/silversharkmod.html
+++ b/customview/silversharkmod.html
@@ -501,7 +501,7 @@
     <br/>
 </p>
 			<p>
-				相关问题交流或者有mod制作需求欢迎通过主页的邮箱联系我~
+				<strong>相关问题交流或者有mod制作需求欢迎通过主页的邮箱联系我~</strong>
 			</p>
 <p>
     <br/>
