--- a/404.html
+++ b/404.html
@@ -182,7 +182,7 @@
   <!-- Copyright -->
   <li class="navigation__item">
     <a href="http://choosealicense.online" title="选择版权"  target="_blank">
-      <i class="social fa fa-copyright"></i>
+      <i class="social fa fa-envelope"></i>
       <span class="label">版权</span>
     </a>
   </li>
