--- a/customview/silversharkmod.html
+++ b/customview/silversharkmod.html
@@ -463,6 +463,12 @@
 				<li>
 					车辆仪表盘信息
 				</li>
+				<li>
+					关于3DSimED
+				</li>
+				<li>
+					车手位置及姿势
+				</li>
 			</ul>
 			<br />
 			<p>
@@ -476,6 +482,11 @@
 				<span>详细操作方法在pipeline.pdf文件P56后。</span><br /><br />
 				<strong>车辆仪表盘及灯光信息</strong><br />
 				<span>灯光信息在data\digital_instruments.ini中。转速表仪表盘信息在data\digital_instruments.ini中，支持显示速度、转速、温度、G值、油量等等信息。详细操作方法在pipeline.pdf文件P19后。	</span><br /><br />
+				<strong>关于3DSimED</strong><br />
+				<span>3DSimED可以导入kn5文件，转存为其他格式，同时支持模型修改，贴图导出等</span><br />
+				<span><a href="https://youtu.be/BwrThQw3p1w">【使用样例】How to change rims for beginners</a></span><br /><br />
+				<strong>车手位置及姿势</strong><br />
+				<span><a href="https://youtu.be/SO4gP5L2CIM">【使用样例】Driver positioning using Kseditor - Tutorial</a></span><br /><br /></span><br /><br />
 			</p>		
 			<p>
 				<strong>其余内容正在持续完善中。。。</strong>
