--- a/customview/silversharkmod.html
+++ b/customview/silversharkmod.html
@@ -469,6 +469,9 @@
 				<li>
 					车手位置及姿势
 				</li>
+				<li>
+					车辆声音
+				</li>
 			</ul>
 			<br />
 			<p>
@@ -486,7 +489,10 @@
 				<span>3DSimED可以导入kn5文件，转存为其他格式，同时支持模型修改，贴图导出等</span><br />
 				<span><a href="https://youtu.be/BwrThQw3p1w">【使用样例】How to change rims for beginners</a></span><br /><br />
 				<strong>车手位置及姿势</strong><br />
-				<span><a href="https://youtu.be/SO4gP5L2CIM">【使用样例】Driver positioning using Kseditor - Tutorial</a></span><br /><br /></span><br /><br />
+				<span><a href="https://youtu.be/SO4gP5L2CIM">【使用样例】Driver positioning using Kseditor - Tutorial</a></span><br /><br />
+				<strong>车辆声音</strong><br />
+				<span>使用Content Manager打开需要替换声音的车辆，点击面板中的替换声音，选择一辆车替换即可。</span><br />
+				<span>自己制作声音请参照pipeline和<a href="https://assettocorsamods.net/threads/fmod-and-assetto-corsa-unofficial-fix.132/">FMod and Assetto Corsa - unofficial fix</a></span><br /><br />
 			</p>		
 			<p>
 				<strong>其余内容正在持续完善中。。。</strong>
