--- a/fsaesim/index.html
+++ b/fsaesim/index.html
@@ -4,8 +4,8 @@
     <title>FSAESIM 大学生方程式模拟竞速系统</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   
-  <link rel="icon" type="image/png" href="/img/favicon.png" />
-  <link href="/img/favicon.png" rel="shortcut icon" type="image/png">
+  <link rel="icon" type="image/png" href="img/favicon.png" />
+  <link href="img/favicon.png" rel="shortcut icon" type="image/png">
   
   <style type="text/css">
   body {
@@ -16,7 +16,7 @@
   width: 100%;
   max-width: none;
   height: 100%;
-	background-image: url(../img/back05.jpg);
+	background-image: url(../fsaesim/img/back05.jpg);
   background-size:cover; 
   background-position-x:center;
  
