--- a/customview/zhuhaifsectrackmod.html
+++ b/customview/zhuhaifsectrackmod.html
@@ -284,7 +284,7 @@
 			</p>
 			
 			<p>
-				<span>本项目不保证一定能够完成，视项目发展而定，越多热忱的Fsaer加入我们，就越可能实现。本项目于即可起开始对外开放，初步建设队伍确定于1月20号之间，确定之后将开始本项目的工作。预计本项目于开始后两周初步形成初版mod，在第三周结束时对外发布第一版正式珠海赛道mod。</span>
+				<span>本项目不保证一定能够完成，视项目发展而定，越多热忱的Fsaer加入我们，就越可能实现。本项目于即刻起开始对外开放，初步建设队伍确定于1月20号之间，确定之后将开始本项目的工作。预计本项目于开始后两周初步形成初版mod，在第三周结束时对外发布第一版正式珠海赛道mod。</span>
 			</p>
 			<p>
 				<span>注意：本项目为非盈利性项目，最终出版的赛道mod将在本网站免费公开发布，所有参与者原则上为自愿参与并且在项目发布前不会有任何盈利。mod发布后可能会有自愿捐赠的通道，所有收入将会按照实际工作情况分发给所有项目建设者。</span>
