--- a/customview/zhuhaifsectrackmod.html
+++ b/customview/zhuhaifsectrackmod.html
@@ -279,6 +279,7 @@
 				联系方式
 			</p>
 			
+			<img src="\assets\2018\zhuhaifsectrackmod\groupQR.png" >
 			<p>
 				加群时请备注学校，所学专业，真实姓名，以及工作范围（能力）。不欢迎加群潜水者和水群者，态度积极良好沟通是一切合作的前提。
 			</p>
