--- a/customview/zhuhaifsectrackmod.html
+++ b/customview/zhuhaifsectrackmod.html
@@ -226,7 +226,7 @@
   <div class="container-fluid">
 	<div class="row-fluid">
 		<div class="span12">
-			<p>
+		<p>
 				公元年2019一月中旬，某人刚结束最后一门期末测验，怅然若失，总觉内心空虚寂寞无所依托。打开电脑，查看自己收藏的每一辆车每一个赛道，却一次都没有点开。顿时他浑身一激灵，终觉其因：
 			</p>
 			
@@ -235,8 +235,9 @@
 			</p>
 			
 			<p>
-				进入正题
+				<strong>进入正题</strong>
 			</p>
+			
 			<p>
 				鄙人是某车队递茶队员，也时常在模拟器上练车（梦里偶尔也会开）。今年fsae的赛车首次来到了珠海，全新的赛道布局，南方的温和气候与每辆嘤嘤赛车给每个在场的人都留下了深刻的印象。
 			</p>
@@ -248,38 +249,45 @@
 			<p>
 				深知此次单枪匹马多半有去无回，所以在此征集雄兵猛将共赴沙场。路上没有酒肉，只有并肩共进、满腔热血的朋友。愿意搭上寒假宝贵时间奋斗于此的Fsaer，请跟我走。
 			</p>
-			
-			<p>
+			<h3>
 				下面开始说人话
+			</h3>
+			
+			<p>
+				是的我们就是来抓壮丁的。
 			</p>
 			
 			<p>
-				技术要求（按照人数需求排列）：
+				<strong>技术要求</strong>（按照人数需求排列）：
 			</p>
 			<p>
-				1、熟练运用3ds Max / Rhino 等三维设计工具。
+				1、熟练运用<strong>3ds Max</strong> / <strong>Rhino</strong> 等三维设计工具。
 			</p>
 			<p>
-				2、熟练使用PS等平面设计工具，并了解游戏贴图原理。
+				2、熟练使用<strong>PS</strong>等平面设计工具，并了解<strong>游戏贴图</strong>原理。
 			</p>
 			<p>
-				3、精通三维建模软件（建立赛道相关的所有模型）。
+				3、精通<strong>三维建模</strong>软件（建立赛道相关的所有模型）。
 			</p>
 			<p>
-				4、有使用过神力科莎sdk（<span>软件开发工具包</span>）<span>并制作修改过相关mod。</span>
+				4、有使用过神力科莎<strong>sdk</strong>（<span>软件开发工具包</span>）<span>并制作修改过相关<strong>mod</strong>。</span>
 			</p>
 			<p>
-				<span>5、精通网页前端制作（用于对本项目网页上的进度更新）。</span>
+				<span>5、精通<strong>网页前端</strong>制作（用于对本项目网页上的进度更新）。</span>
 			</p>
 			
 			<p>
 				<span>以上要求只需满足一条，并且愿意在寒假至少每天分配出2小时时间、容易沟通、学习能力强者，希望用实际行动支持车手训练条件与</span><span>fsae</span><span>发展的</span><span>，欢迎你加入我们。</span>
 			</p>
+			
+			
+			
 			<p>
-				联系方式
+				<strong>联系方式</strong>
 			</p>
 			
 			<img src="\assets\2018\zhuhaifsectrackmod\groupQR.png" >
+			
 			<p>
 				加群时请备注学校，所学专业，真实姓名，以及工作范围（能力）。不欢迎加群潜水者和水群者，态度积极良好沟通是一切合作的前提。
 			</p>
@@ -287,9 +295,14 @@
 			<p>
 				<span>本项目不保证一定能够完成，视项目发展而定，越多热忱的Fsaer加入我们，就越可能实现。本项目于即刻起开始对外开放，初步建设队伍确定于1月20号之间，确定之后将开始本项目的工作。预计本项目于开始后两周初步形成初版mod，在第三周结束时对外发布第一版正式珠海赛道mod。</span>
 			</p>
+			
+			
+			
 			<p>
-				<span>注意：本项目为非盈利性项目，最终出版的赛道mod将在本网站免费公开发布，所有参与者原则上为自愿参与并且在项目发布前不会有任何盈利。mod发布后可能会有自愿捐赠的通道，所有收入将会按照实际工作情况分发给所有项目建设者。</span>
+				<span><strong>注意</strong>：本项目为非盈利性项目，最终出版的赛道mod将在本网站免费公开发布，所有参与者原则上为自愿参与并且在项目发布前不会有任何盈利。mod发布后可能会有自愿捐赠的通道，所有收入将会按照实际工作情况分发给所有项目建设者。</span>
 			</p>
+			
+			
 			
 		</div>
 	</div>
