--- a/customview/zhuhaifsectrackmod.html
+++ b/customview/zhuhaifsectrackmod.html
@@ -226,6 +226,8 @@
   <div class="container-fluid">
 	<div class="row-fluid">
 		<div class="span12">
+		
+			<br/>
 		<p>
 				公元年2019一月中旬，某人刚结束最后一门期末测验，怅然若失，总觉内心空虚寂寞无所依托。打开电脑，查看自己收藏的每一辆车每一个赛道，却一次都没有点开。顿时他浑身一激灵，终觉其因：
 			</p>
@@ -235,6 +237,7 @@
 			</p>
 			<br/>
 			
+			<br/>
 			<p>
 				<strong>进入正题</strong>
 			</p>
@@ -260,7 +263,7 @@
 			
 			<br/>
 			<p>
-				是的我们就是来抓壮丁的。
+				我们就是来抓壮丁的。
 			</p>
 			
 			<br/>
