--- a/customview/zhuhaifsectrackmod.html
+++ b/customview/zhuhaifsectrackmod.html
@@ -261,7 +261,6 @@
 				下面开始说人话
 			</h3>
 			
-			
 			<br/>
 			<p>
 				<strong>技术要求</strong>（按照人数需求排列）：
@@ -306,13 +305,16 @@
 			</p>
 			
 			
+			<br/>
+			<br/>
+			<br/>
 			
 			<p>
 				<span><strong>注意</strong>：本项目为非盈利性项目，最终出版的赛道mod将在本网站免费公开发布，所有参与者原则上为自愿参与并且在项目发布前不会有任何盈利。mod发布后可能会有自愿捐赠的通道，所有收入将会按照实际工作情况分发给所有项目建设者。</span>
 			</p>
 			
 			<p>
-				如有其他疑问请通过左侧下方邮箱联系我。
+				如有其他疑问请通过左侧邮箱联系我。
 			</p>
 			
 			
