--- a/customview/zhuhaifsectrackmod.html
+++ b/customview/zhuhaifsectrackmod.html
@@ -265,21 +265,23 @@
 			<p>
 				<strong>技术要求</strong>（按照人数需求排列）：
 			</p>
-			<p>
-				1、熟练运用<strong>3ds Max</strong> / <strong>Rhino</strong> 等三维设计工具。
-			</p>
-			<p>
-				2、熟练使用<strong>PS</strong>等平面设计工具，并了解<strong>游戏贴图</strong>原理。
-			</p>
-			<p>
-				3、精通<strong>三维建模</strong>软件（建立赛道相关的所有模型）。
-			</p>
-			<p>
-				4、有使用过神力科莎<strong>sdk</strong>（<span>软件开发工具包</span>）<span>并制作修改过相关<strong>mod</strong>。</span>
-			</p>
-			<p>
-				<span>5、精通<strong>网页前端</strong>制作（用于对本项目网页上的进度更新）。</span>
-			</p>
+			<blockquote>
+				<p>
+					1、熟练运用<strong>3ds Max</strong> / <strong>Rhino</strong> 等三维设计工具。
+				</p>
+				<p>
+					2、熟练使用<strong>PS</strong>等平面设计工具，并了解<strong>游戏贴图</strong>原理。
+				</p>
+				<p>
+					3、精通<strong>三维建模</strong>软件（建立赛道相关的所有模型）。
+				</p>
+				<p>
+					4、有使用过神力科莎<strong>sdk</strong>（<span>软件开发工具包</span>）<span>并制作修改过相关<strong>mod</strong>。</span>
+				</p>
+				<p>
+					<span>5、精通<strong>网页前端</strong>制作（用于对本项目网页上的进度更新）。</span>
+				</p>
+			</blockquote>
 			
 			<p>
 				<span>以上要求只需满足一条，并且愿意在寒假至少每天分配出2小时时间、容易沟通、学习能力强者，希望用实际行动支持车手训练条件与</span><span>fsae</span><span>发展的</span><span>，欢迎你加入我们。</span>
