--- a/customview/zhuhaifsectrackmod.html
+++ b/customview/zhuhaifsectrackmod.html
@@ -228,6 +228,8 @@
 		<div class="span12">
 		
 			<br/>
+			
+			<blockquote>
 		<p>
 				公元年2019一月中旬，某人刚结束最后一门期末测验，怅然若失，总觉内心空虚寂寞无所依托。打开电脑，查看自己收藏的每一辆车每一个赛道，却一次都没有点开。顿时他浑身一激灵，终觉其因：
 			</p>
@@ -235,6 +237,8 @@
 			<p>
 				就是闲得蛋疼了。
 			</p>
+			
+			</blockquote>
 			<br/>
 			
 			<br/>
