--- a/customview/zhuhaifsectrackmod.html
+++ b/customview/zhuhaifsectrackmod.html
@@ -228,8 +228,6 @@
 		<div class="span12">
 		
 			<br/>
-			
-			<blockquote>
 		<p>
 				公元年2019一月中旬，某人刚结束最后一门期末测验，怅然若失，总觉内心空虚寂寞无所依托。打开电脑，查看自己收藏的每一辆车每一个赛道，却一次都没有点开。顿时他浑身一激灵，终觉其因：
 			</p>
@@ -237,10 +235,11 @@
 			<p>
 				就是闲得蛋疼了。
 			</p>
-			
-			</blockquote>
 			<br/>
 			
+        <hr class="panel-cover__divider" />
+        <p class="panel-cover__description">嗨，我是傻逼。</p>
+        <hr class="panel-cover__divider panel-cover__divider--secondary" />
 			<br/>
 			<p>
 				<strong>进入正题</strong>
