--- a/customview/zhuhaifsectrackmod.html
+++ b/customview/zhuhaifsectrackmod.html
@@ -247,7 +247,7 @@
 			</p>
 			
 			<p>
-				上一个高质量fsae赛道（<a href="https://acstuff.ru/s/q:race/online/join?ip=188.131.224.117&httpPort=20000" target="_blank" >襄阳梦想方程式赛场</a>）距今已是4年，如今鄙人异想天开，有了个不自量力的计划，便是重现出2018年fsec比赛的耐久赛道。
+				上一个高质量fsae赛道（<a href="https://weibo.com/1645086951/CuPqRxHiF" target="_blank" >襄阳梦想方程式赛场</a>）距今已是4年，如今鄙人异想天开，有了个不自量力的计划，便是重现出2018年fsec比赛的耐久赛道。
 			</p>
 			
 			<p>
