--- a/customview/zhuhaifsectrackmod.html
+++ b/customview/zhuhaifsectrackmod.html
@@ -256,7 +256,9 @@
 			
 			<br/>
 			<br/>
+			<hr style=" height:2px;border:none;border-top:2px dotted #185598;" />
 			
+			<br/>
 			<h3>
 				下面开始说人话
 			</h3>
