--- a/customview/zhuhaifsectrackmod.html
+++ b/customview/zhuhaifsectrackmod.html
@@ -306,6 +306,11 @@
 			</p>
 			
 			<br/>
+			
+			<hr style="height:3px;border:none;border-top:3px double red;" />
+			
+			<br/>
+			
 			<p>
 				<span>本项目不保证一定能够完成，视项目发展而定，越多热忱的Fsaer加入我们，就越可能实现。本项目于即刻起开始对外开放，初步建设队伍确定于1月20号之间，确定之后将开始本项目的工作。预计本项目于开始后两周初步形成初版mod，在第三周结束时对外发布第一版正式珠海赛道mod。</span>
 			</p>
