--- a/customview/zhuhaifsectrackmod.html
+++ b/customview/zhuhaifsectrackmod.html
@@ -256,7 +256,7 @@
 			
 			<br/>
 			<br/>
-			<hr style=" height:2px;border:none;border-top:2px dotted #185598;" />
+			<hr style=" height:2px;border:none;border-top:2px  #185598;" />
 			
 			<br/>
 			<h3>
@@ -301,16 +301,18 @@
 			
 			<img src="\assets\2018\zhuhaifsectrackmod\groupQR.png" >
 			
+			<br/>
 			<p>
 				加群时请备注学校，所学专业，真实姓名，以及工作范围（能力）。不欢迎加群潜水者和水群者，态度积极良好沟通是一切合作的前提。
 			</p>
 			
 			<br/>
 			
-			<hr style="height:3px;border:none;border-top:3px double red;" />
+			<hr style="height:1px;border:none;border-top:1px solid #555555;" />
 			
 			<br/>
 			
+			<br/>
 			<p>
 				<span>本项目不保证一定能够完成，视项目发展而定，越多热忱的Fsaer加入我们，就越可能实现。本项目于即刻起开始对外开放，初步建设队伍确定于1月20号之间，确定之后将开始本项目的工作。预计本项目于开始后两周初步形成初版mod，在第三周结束时对外发布第一版正式珠海赛道mod。</span>
 			</p>
