--- a/customview/zhuhaifsectrackmod.html
+++ b/customview/zhuhaifsectrackmod.html
@@ -244,7 +244,7 @@
 			</p>
 			
 			<p>
-				鄙人是某车队递茶队员，也时常在模拟器上练车（梦里偶尔也会开）。今年fsae的赛车首次来到了珠海，全新的赛道布局，南方的温和气候与每辆嘤嘤赛车给每个在场的人都留下了深刻的印象。
+				鄙人是某车队递茶队员，也时常在模拟器上练车（梦里偶尔也会开）。今年fsae的赛车首次来到了珠海，全新的赛道布局，南方的温和气候与每辆独特的嘤嘤赛车给每个在场的人都留下了深刻的印象。
 			</p>
 			
 			<p>
