--- a/customview/zhuhaifsectrackmod.html
+++ b/customview/zhuhaifsectrackmod.html
@@ -289,7 +289,7 @@
 			
 			<br/>
 			<p>
-				<span>以上要求只需满足一条，并且愿意在寒假至少每天分配出2小时时间、容易沟通、学习能力强者，希望用实际行动支持车手训练条件与</span><span>fsae</span><span>发展的</span><span>，欢迎你加入我们。</span>
+				<span>以上要求只需满足一条。如果你具有能力并且愿意在寒假至少每天分配出2小时时间、容易沟通、学习能力强、希望用实际行动提升车手训练条件与支持</span><span>fsae</span><span>发展</span><span>，欢迎加入我们。</span>
 			</p>
 			
 			
