--- a/customview/zhuhaifsectrackmod.html
+++ b/customview/zhuhaifsectrackmod.html
@@ -298,15 +298,15 @@
 			<br/>
 			<br/>
 			
-			<p>
+			<h3>
 				<strong>联系方式</strong>
-			</p>
+			</h3>
 			
 			<img src="\assets\2018\zhuhaifsectrackmod\groupQR.png" >
 			
 			<br/>
 			<p>
-				加群时请备注学校，所学专业，真实姓名，以及工作范围（能力）。不欢迎加群潜水者和水群者，态度积极良好沟通是一切合作的前提。
+				加群时请备注<strong>学校，所学专业，真实姓名，以及工作范围（能力）</strong>。不欢迎加群潜水者和水群者，<strong>态度积极良好沟通</strong>是一切合作的前提。
 			</p>
 			
 			<br/>
@@ -321,7 +321,6 @@
 			</p>
 			
 			
-			<br/>
 			<br/>
 			<br/>
 			
