--- a/customview/zhuhaifsectrackmod.html
+++ b/customview/zhuhaifsectrackmod.html
@@ -19,7 +19,7 @@
   <meta name="twitter:keywords" content="珠海， Assetto Corsa ，神力科莎，mod，fsae">
   
   <meta property="og:type" content="article">
-  <meta property="og:title" content="珠海 VII Assetto Corsa mod 制作">
+  <meta property="og:title" content="2018珠海fsec赛道mod计划">
   <meta property="og:description" content="2018珠海fsec赛道mod计划">
   <meta name="og:keywords" content="珠海， Assetto Corsa ，神力科莎，mod，fsae">
 
@@ -302,7 +302,11 @@
 				<strong>联系方式</strong>
 			</h3>
 			
-			<img src="\assets\2018\zhuhaifsectrackmod\groupQR.png" >
+      <div id="contribute" style="display:none;">
+        <p align="center" >
+			<img src="\assets\2018\zhuhaifsectrackmod\groupQR.png" alt="QQ群" >
+        </p>
+      </div>
 			
 			<br/>
 			<p>
